--- a/todo
+++ b/todo
@@ -2,3 +2,4 @@
 - the "next" and "prev" media buttons should only be shown when their is avable media to play
 - upgrade to mpv-qt
 - add subtitles
+- hide media controls after no mouse movement
